update bootstrap style

--- a/demande_suppression_compte.html
+++ b/demande_suppression_compte.html
@@ -9,7 +9,7 @@
 
     <!-- libraries CSS -->
     <link rel="stylesheet" href="assets/icon/flaticon_digicom.css">
-    <link rel="stylesheet" href="assets/vendor/bootstrap/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/vendor/splide/splide.min.css">
     <link rel="stylesheet" href="assets/vendor/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/vendor/animate-wow/animate.min.css">
@@ -367,7 +367,7 @@
         <!-- header -->
         <div class="ul-sidebar-header">
             <div class="ul-sidebar-header-logo">
-                <a href="index.html">
+                <a href="/">
                     <img src="assets/img/logo_spaceboost.png" alt="logo" class="logo">
                 </a>
             </div>
@@ -399,7 +399,7 @@
         <div class="ul-header-bottom to-be-sticky wow animate__slideInDown" >
             <div class="ul-header-bottom-wrapper ul-header-container">
                 <div class="logo-container">
-                    <a href="index.html" class="d-inline-block"><img src="assets/img/logo_spaceboost.png" alt="logo" class="logo"></a>
+                    <a href="/" class="d-inline-block"><img src="assets/img/logo_spaceboost.png" alt="logo" class="logo"></a>
                 </div>
 
                 <div class="ul-header-bottom-center">
@@ -597,7 +597,7 @@
                 <div class="ul-footer-top-contact-infos">
                     <!-- single info -->
                     <div class="ul-footer-top-logo">
-                        <a href="index.html"><img src="assets/img/logo_spaceboost.png" alt="logo"></a>
+                        <a href="/"><img src="assets/img/logo_spaceboost.png" alt="logo"></a>
                         <div class="ul-footer-socials">
                             <a href="https://www.facebook.com/profile.php?id=61566792945862"><i class="flaticon-facebook-app-symbol"></i></a>
                             <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fyoutube.com%2F%40SpacesBoost%3Ffbclid%3DIwZXh0bgNhZW0CMTAAYnJpZBExRElJRGk4Y2JVS0U0QURoTQEe0dxOoNnLljc5TxhSKQLLTPWWjufRfgm8tFdgh6dGq7htfG0c6DRs1XfZYGA_aem_FCVwafPgQ3MnN1xsmcDv2g&h=AT0jCmSJZN49jhfpgFoe5lxfWJWPRKMXIdy_ebZp1Yu465_uNEsiJy6twVmrxHIjUvkoQdIbA8H-6CwCXbEJ-QwyOS-4_n-fmaGmsCrPHnMfzvdqxfdtfLWVYx7E3rsQJPj0"><i class="fab fa-youtube"></i></a>
@@ -690,7 +690,7 @@
     <!-- FOOTER SECTION END -->
 
     <!-- libraries JS -->
-    <script src="assets/vendor/bootstrap/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
     <script src="assets/vendor/splide/splide.min.js"></script>
     <script src="assets/vendor/splide/splide-extension-auto-scroll.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
