update bootstrap styles

--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
                 <div class="ul-footer-top-contact-infos">
                     <!-- single info -->
                     <div class="ul-footer-top-logo">
-                        <a href="index.html"><img src="assets/img/logo_spaceboost.png" alt="logo"></a>
+                        <a href="/"><img src="assets/img/logo_spaceboost.png" alt="logo"></a>
                         <div class="ul-footer-socials">
                             <a href="https://www.facebook.com/profile.php?id=61566792945862"><i class="flaticon-facebook-app-symbol"></i></a>
                             <a href="https://l.facebook.com/l.php?u=https%3A%2F%2Fyoutube.com%2F%40SpacesBoost%3Ffbclid%3DIwZXh0bgNhZW0CMTAAYnJpZBExRElJRGk4Y2JVS0U0QURoTQEe0dxOoNnLljc5TxhSKQLLTPWWjufRfgm8tFdgh6dGq7htfG0c6DRs1XfZYGA_aem_FCVwafPgQ3MnN1xsmcDv2g&h=AT0jCmSJZN49jhfpgFoe5lxfWJWPRKMXIdy_ebZp1Yu465_uNEsiJy6twVmrxHIjUvkoQdIbA8H-6CwCXbEJ-QwyOS-4_n-fmaGmsCrPHnMfzvdqxfdtfLWVYx7E3rsQJPj0"><i class="fab fa-youtube"></i></a>
