delete contact page

--- a/demande_suppression_compte.html
+++ b/demande_suppression_compte.html
@@ -639,7 +639,7 @@
                     <div class="ul-footer-about">
                         <h3 class="ul-footer-widget-title text-light">A Propos</h3>
                         <p class="ul-footer-about-txt text-light">SpacesBoost est une plateforme panafricaine innovante qui connecte les entreprises avec des influenceurs pour dynamiser leur visibilité et leur croissance en ligne.</p>
-                        <a href="contact.html" class="ul-footer-about-btn text-light">Contactez-nous <i class="flaticon-top-right"></i></a>
+                        <a href="https://wa.me/22941555579" class="ul-footer-about-btn text-light">Contactez-nous <i class="flaticon-top-right"></i></a>
                     </div>
 
                     <div class="ul-footer-widget">
